--- a/css/pages/about.css
+++ b/css/pages/about.css
@@ -1,6 +1,7 @@
 .main--about{
+    background-image:none;
     min-height: 70vh;
-    margin-bottom:-110px;
+    margin-bottom:-1em;
 }
 
 #foreground--buildings{
