This commit adds skills css file

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,3 +20,4 @@
 @import './componets/cta.css';
 @import './componets/footer.css';
 @import './componets/table.css';
+@import './componets/skills.css';
