This commit adds the cv section

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@
 @import './componets/btn.css';
 @import './componets/navigation.css';
 @import './componets/cta.css';
+@import './componets/cv.css';
 @import './componets/footer.css';
 @import './componets/table.css';
 @import './componets/skills.css';
