--- a/css/variables/colors.css
+++ b/css/variables/colors.css
@@ -20,6 +20,8 @@
     
     --contact-submit-active: rgba(34, 51, 59, .3);
     --contact-submit-hover: rgba(34, 51, 59, .3);
+    
+    --cloud-grey: #BEC1BF;
 }
 
 
