--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@
 @import './pages/content.css';
 
 @import './componets/btn.css';
+@import './componets/logo.css';
 @import './componets/navigation.css';
 @import './componets/cta.css';
 @import './componets/footer.css';
