--- a/css/componets/navigation.css
+++ b/css/componets/navigation.css
@@ -1,51 +1,10 @@
-.logo__container{
-    width:100%;
-}
-.logo{
-    position: relative;
-    min-width: 15em;
-    max-width:50vw;
-}
-@media only screen and (max-width: 735px){
-    .logo{
-        max-width: 100%;
-    }
-}
-.logo:hover{
-
-}
-
 .navigation__checkbox{
-    
-}
-.navigation__btn{
-    
-}
-.navigation__checkbox{
-    
-}
-.navigation-bg{
-    height: 6rem;
-    width:6rem;
-    position:fixed;
-    top:6.5rem;
-    right: 6.5rem;
-    background-color: red;
-    transition: all 1s;
-}
-.navigation__container{
-    
+    display:none;
 }
 .navigation__list{
-    
-}
-.navigation__item{
-    
+    display:flex;
 }
 .navigation__link{
-    
-}
-/* .navigation__link{
     transition:all .3s ease-in;
     color:#EAE0D5;
 }
@@ -55,8 +14,155 @@
 .navigation__link:active{
     color:hsl(31, 33%, 98%);
 }
+.navigation-bg{
+    display:none;
+}
+.navigation__btn{
+    display:none;
+}
 @media only screen and (max-width: 735px){ 
-    .navigation{
-        display:none;
+    /*Hamburger top and bottom */
+    .navigation__btn{
+        display:block;
+        position: fixed;
+        color:var(--color-white);
+        height:6rem;
+        width: 6rem;
+        top: .5rem;
+        right: 5rem;
+        z-index: 600;
     }
-} */
+    /*Hamburger middle */
+    .navigation__btn--middle{
+        position: absolute;
+        color:var(--color-white);
+        top: 8px;
+        right: 30.5%;
+        z-index: 600;
+    }
+    .navigation__btn--middle::after{
+        content: "";
+        position: absolute;
+        top:2.75rem;
+        right:0rem;
+        width:20px;
+        height:3px;
+        background-color:var(--color-white);
+        transform-origin: 0 0;
+        transition: all .3s ease-out;
+    }
+    .navigation__btn::before{
+        content: "";
+        position: absolute;
+        top:2.5rem;
+        right:30%;
+        width:20px;
+        height:3px;
+        background-color:var(--link-hover);
+        transform-origin: 0 0;
+        transition: all .3s ease-out;
+    }
+    .navigation__btn::after{
+        content: "";
+        position: absolute;
+        top:4em;
+        right:30%;
+        width:20px;
+        height:3px;
+        background-color:var(--link-hover);
+        transform-origin: 0 0;
+        transition: all .3s ease-out;
+    }
+    .navigation-bg{
+        display:block;
+        z-index: 100;
+        height: 0rem;
+        width:6rem;
+        position:absolute;
+        top:.5rem;
+        right: 0rem;
+        background-color: var(--modal);
+        transition: all 1s cubic-bezier(.86, 0, .07, 1);
+        
+        /* transform: scale(80); */
+    }
+    
+    /*This is the nav element*/
+    .navigation__container{
+        visibility: hidden;
+        opacity: 0;
+        height: 100vh;
+        position:fixed;
+        width:100%;
+        top: 0;
+        right:0;
+        z-index: 500;
+        
+        
+        transition: all .8s cubic-bezier(.86, 0, .07, 1);
+    }
+    
+    /*Centers the nav list*/
+    .navigation__list{
+        /* width:100%; */
+        display:block;
+        position:absolute;
+        top:30%;
+        right:0;
+        transform: translate(-33%, -30%);
+        text-align:right;
+    }
+    .navigation__item{
+        margin:1rem 0em;
+    }
+    .navigation__link:link,
+    .navigation__link:visited{
+        display:inline-block;
+        background-image: linear-gradient(210deg, transparent 5%, var(--color-dark-1), transparent 50%, var(--color-white) 50%);
+        background-size: 210%;
+        background-position: 0%;
+        font-size: 2rem;
+        color:var(--color-dark-1);
+        padding:.2em;
+        transition: all .4s ease-in-out;
+    }
+    .navigation__link:hover,
+    .navigation__link:active{
+        color:var(--color-white);
+        background-size: 380%;
+        background-position: -2%;
+    }
+    .navigation__checkbox:checked ~ .navigation-bg{
+        transform: scale(20);
+        height:100vh;
+    }
+    .navigation__checkbox:checked ~ .navigation__container{
+        top:1.5em;
+        visibility: visible;
+        opacity: 1;
+    }
+    .navigation__checkbox:checked ~ .navigation__btn  .navigation__btn--middle::after{
+        right:-1rem;
+        width:20px;
+        height:3px;
+        background-color:var(--color-white);
+        transform-origin: 0 0%;
+        transition: all .3s ease-in-out;
+    }
+    .navigation__checkbox:checked ~ .navigation__btn::before{
+        content: "";
+        position: absolute;
+        top:2.5rem;
+        right:40%;
+        width:20px;
+        height:3px;
+        background-color:var(--link-hover);
+        transform-origin: 0 0;
+        transition: all .3s ease-out;
+    }
+    .navigation__checkbox:checked ~ .navigation__btn::after{
+        right:35%;
+        transition: all .3s ease-out;
+    }
+}
+
