--- a/css/variables/base.css
+++ b/css/variables/base.css
@@ -1,6 +1,7 @@
 *{
-    --header-padding: 2em 6em; 
+    --header-padding: 2em 4em; 
     --main-padding: 5em 5em;
+    --mobile-padding: 2em 2em;
     --shadow-1: 3px 3px 3em hsla(31, 33%, 68%, .7), -.5em 1.5em 1.5em hsla(30, 11%, 4%, .134); 
     --shadow-2: -6px 7px 29px 1px rgba(0,0,0,0.20);
 }
