--- a/css/componets/navigation.css
+++ b/css/componets/navigation.css
@@ -8,9 +8,9 @@
     transition:all .3s ease-in;
     color:#EAE0D5;
 }
-.navigation__link:hover{
+/* .navigation__link:hover{
     color:hsl(31, 33%, 68%);
-}
+} */
 .navigation__link:active{
     color:hsl(31, 33%, 98%);
 }
@@ -20,7 +20,10 @@
 .navigation__btn{
     display:none;
 }
+
+
 @media only screen and (max-width: 735px){ 
+    
     /*Hamburger top and bottom */
     .navigation__btn{
         display:block;
@@ -28,9 +31,14 @@
         color:var(--color-white);
         height:6rem;
         width: 6rem;
-        top: .5rem;
-        right: 5rem;
+        top: -.25rem;
+        right: 4rem;
         z-index: 600;
+    }
+    @media only screen and (max-width: 414px){
+        .navigation__btn{
+            right: 0rem;
+        }
     }
     /*Hamburger middle */
     .navigation__btn--middle{
@@ -78,7 +86,7 @@
         z-index: 100;
         height: 0rem;
         width:6rem;
-        position:absolute;
+        position:fixed;
         top:.5rem;
         right: 0rem;
         background-color: var(--modal);
@@ -118,23 +126,26 @@
     .navigation__link:link,
     .navigation__link:visited{
         display:inline-block;
-        background-image: linear-gradient(210deg, transparent 5%, var(--color-dark-1), transparent 50%, var(--color-white) 50%);
+        background-image: linear-gradient(210deg, transparent 5%, var(--link-hover), transparent 50%, var(--header-bg) 50%);
         background-size: 210%;
         background-position: 0%;
         font-size: 2rem;
-        color:var(--color-dark-1);
+        color:var(--color-white);
         padding:.2em;
         transition: all .4s ease-in-out;
     }
     .navigation__link:hover,
     .navigation__link:active{
-        color:var(--color-white);
+        color:hsl(31, 33%, 68%);
         background-size: 380%;
         background-position: -2%;
     }
+    
     .navigation__checkbox:checked ~ .navigation-bg{
-        transform: scale(20);
+        position: fixed;
+        transform: scale(50);
         height:100vh;
+        width: 100vw;
     }
     .navigation__checkbox:checked ~ .navigation__container{
         top:1.5em;
