This commit adds markup validation

--- a/css/animations/light-switch.css
+++ b/css/animations/light-switch.css
@@ -6,7 +6,7 @@
     animation-direction: alternate;
     animation-timing-function: step-end;
 }
-#light-switch-2{
+.light-switch-2{
     /* animation: light-switch 2s infinite 20s linear alternate; */
     animation-duration: 7.5s;
     animation-name: light-switch-2;
@@ -25,7 +25,7 @@
     animation-delay: 10s;
 }
 
-#light-switch-4{
+.light-switch-4{
     /* animation: light-switch 2s infinite 20s linear alternate; */
     animation-duration: 3.7s;
     animation-name: light-switch-4;
