--- a/css/animations/cloud.css
+++ b/css/animations/cloud.css
@@ -1,14 +1,16 @@
-#cloud-1{
-    animation: 30s cloud-move-1 infinite alternate linear;
-}
-#cloud-4{
-    animation: 25s cloud-move-1 infinite alternate linear;
+#cloud-1 {
+  animation: 30s cloud-move-1 infinite alternate linear;
 }
 
-#cloud-6{
-    animation: 320s cloud-move-2 infinite alternate linear;
+#cloud-4 {
+  animation: 25s cloud-move-1 infinite alternate linear;
+  -webkit-animation: 25s cloud-move-1 infinite alternate linear;
 }
 
-#cloud-5{
-    animation: 120s cloud-move-3 infinite alternate linear;
+#cloud-6 {
+  animation: 320s cloud-move-2 infinite alternate linear;
+}
+
+#cloud-5 {
+  animation: 120s cloud-move-3 infinite alternate linear;
 }
