--- a/css/styles.main.css
+++ b/css/styles.main.css
@@ -1,5 +1,35 @@
 * {
+  --header-padding: 2em 6em;
+  --main-padding: 5em 5em;
+  --mobile-padding: 2em 2em;
+  --shadow-1: 3px 3px 3em hsla(31, 33%, 68%, .7), -.5em 1.5em 1.5em hsla(30, 11%, 4%, .134);
+  --shadow-2: -6px 7px 29px 1px rgba(0,0,0,0.20);
+}
+
+:root {
+  --color-dark-1:#0A0908;
+  --color-dark-2:#22333B;
+  --color-dark-3:#0b0a09;
+  --color-white: #EAE0D5;
+  --color-white--darker: hsl(31, 13%, 68%);
+  --body-bg:hsla(31,33%, 88%, .4);
+  --header-bg: hsla(199, 17%, 16%, 1);
+  --modal:hsla(199, 27%, 18%, .95);
+  --link-hover: #E94F37;
+  --nav-hover: hsl(31, 33%, 68%);
+  --nav-active: hsl(31, 33%, 98%);
+  --nav-visited: hsl(31, 33%, 88%);
+  --logo-hover: hsl(31, 33%, 93%);
+  --logo-active: hsl(31, 33%, 100%);
+  --contact-submit-active: rgba(34, 51, 59, .3);
+  --contact-submit-hover: rgba(34, 51, 59, .3);
+  --cloud-grey: #BEC1BF;
+}
+
+* {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 /*? element styles*/
@@ -66,13 +96,6 @@ footer > div > p {
 }
 
 main {
-  background-image: url("../../img/body-bg-texture.jpg");
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: top right;
-  background-repeat: no-repeat;
-  min-height: 100vh;
-  display: grid;
   font-weight: 400;
   font-size: 1.2rem;
   line-height: 1.6;
@@ -80,26 +103,6 @@ main {
 
 li {
   list-style: none;
-}
-
-table {
-  margin: 0 auto;
-  text-align: center;
-}
-
-th {
-  font-size: 1.5rem;
-  padding: 1em 2em;
-}
-
-td {
-  padding: 0em 2em;
-}
-
-@media only screen and (max-width: 854px) {
-  td {
-    display: none;
-  }
 }
 
 /*? base styles for links */
@@ -122,6 +125,117 @@ h2 {
 
 img {
   max-width: 100%;
+}
+
+@font-face {
+  font-family: "Poppins-light";
+  src: url("../../fonts/Poppins-Light.ttf") format("truetype");
+}
+
+.main__home {
+  background-image: url("../../img/body-bg-texture.jpg");
+  background-size: contain;
+  background-attachment: fixed;
+  background-position: top right;
+  background-repeat: no-repeat;
+  min-height: 50vh;
+}
+
+.main__home--wrapper {
+  display: grid;
+  place-content: center;
+  height: 100%;
+  padding: var(--main-padding);
+}
+
+@media only screen and (max-width: 414px) {
+  .main__home--wrapper {
+    padding: var(--mobile-padding);
+  }
+}
+
+.main__home--container {
+  display: grid;
+  grid-template-columns: .5fr 1fr;
+  grid-template-rows: 1fr;
+  column-gap: 5em;
+  row-gap: 2em;
+  align-items: center;
+}
+
+@media only screen and (max-width: 768px) {
+  .main__home--container {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media only screen and (max-width: 928px) {
+  .main__home--container {
+    grid-template-columns: 1fr;
+  }
+}
+
+.main__about {
+  background-image: none;
+  min-height: 70vh;
+  margin-bottom: -1em;
+  padding: 0;
+}
+
+.main__works {
+  background-image: url("../../img/body-bg-texture.jpg");
+  background-size: contain;
+  background-attachment: fixed;
+  background-position: top right;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+}
+
+.main__works--wrapper {
+  display: grid;
+  place-content: center;
+  height: 100%;
+  padding: var(--main-padding);
+}
+
+@media only screen and (max-width: 414px) {
+  .main__works--wrapper {
+    padding: var(--mobile-padding);
+  }
+}
+
+.main__contact--wrapper {
+  display: grid;
+  place-content: center;
+  height: 100%;
+  padding: var(--main-padding);
+}
+
+@media only screen and (max-width: 414px) {
+  .main__contact--wrapper {
+    padding: var(--mobile-padding);
+  }
+}
+
+.main__contact--container {
+  display: grid;
+  grid-template-columns: .5fr 1fr;
+  grid-template-rows: 1fr;
+  column-gap: 5em;
+  row-gap: 2em;
+  align-items: center;
+}
+
+@media only screen and (max-width: 768px) {
+  .main__contact--container {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media only screen and (max-width: 928px) {
+  .main__contact--container {
+    grid-template-columns: 1fr;
+  }
 }
 
 .navigation__checkbox {
@@ -333,4 +447,290 @@ img {
     right: 35%;
     transition: all 0.3s ease-out;
   }
+}
+
+.footer__headline {
+  color: #EAE0D5;
+}
+
+.footer__wrapper {
+  display: flex;
+  justify-content: space-evenly;
+  min-width: 15em;
+}
+
+.home__works {
+  display: block;
+}
+
+.home__copy {
+  height: 100%;
+}
+
+.home__copy--heading {
+  font-family: "Poppins-light";
+  font-size: 4.5rem;
+}
+
+@media only screen and (max-width: 1024px) {
+  .home__copy--heading {
+    font-size: 3rem;
+  }
+}
+
+.home__image {
+  max-width: 30%;
+}
+
+.home__inner {
+  display: flex;
+  flex-direction: column;
+  padding: 0em 0em;
+}
+
+.home__inner a {
+  margin-top: 2em;
+}
+
+@media only screen and (max-width: 415px) {
+  .home__inner {
+    padding: 0em 1.5em;
+  }
+}
+
+.about__skills {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.about__skills th {
+  font-size: 1.5rem;
+  padding: 1em 2em;
+}
+
+.about__skills td {
+  padding: 0em 2em;
+}
+
+@media only screen and (max-width: 854px) {
+  .about__skills td {
+    display: none;
+  }
+}
+
+.about__illustration {
+  /* margin-top:-4em; */
+  /* overflow: hidden; */
+  display: flex;
+  /* z-index: -1; */
+  flex-direction: column;
+  align-items: center;
+}
+
+.about__cv {
+  display: flex;
+  justify-content: center;
+}
+
+.about__cv --btn {
+  background-color: var(--cloud-grey);
+  font-family: 'Roboto Condensed', sans-serif;
+  border-radius: 30px;
+  border: none;
+  font-size: 1.2rem;
+  padding: .9em;
+}
+
+#foreground--buildings {
+  min-width: 100%;
+}
+
+#mountains {
+  min-width: 100%;
+}
+
+.project__container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  column-gap: 3em;
+  row-gap: 4em;
+}
+
+@media only screen and (max-width: 854px) {
+  .project__container {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    column-gap: 3em;
+    row-gap: 4em;
+  }
+}
+
+@media only screen and (max-width: 590px) {
+  .project__container {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    column-gap: 3em;
+    row-gap: 4em;
+  }
+}
+
+.project__card {
+  box-shadow: 3px 3px 3em rgba(200, 174, 146, 0.7), -0.5em 1.5em 1.5em rgba(11, 10, 9, 0.134);
+}
+
+.project__card--image {
+  max-width: 100%;
+}
+
+.project__copy {
+  padding: 1em;
+}
+
+.project__card:nth-child(odd) {
+  background-color: rgba(34, 50, 58, 0.9);
+  color: #EAE0D5;
+}
+
+.project__card:nth-child(odd) a {
+  color: #EAE0D5;
+}
+
+.project__card:nth-child(even) {
+  background-color: rgba(158, 186, 199, 0.9);
+  color: #0A0908;
+}
+
+@keyframes light-switch-1 {
+  0% {
+    fill: #EAE0D5;
+  }
+  50% {
+    fill: #2E2E2E;
+  }
+  100% {
+    fill: #2E2E2E;
+  }
+}
+
+@keyframes light-switch-2 {
+  0% {
+    fill: #EAE0D5;
+  }
+  50% {
+    fill: #2E2E2E;
+  }
+  100% {
+    fill: #2E2E2E;
+  }
+}
+
+@keyframes light-switch-3 {
+  0% {
+    fill: #EAE0D5;
+  }
+  50% {
+    fill: #2E2E2E;
+  }
+  100% {
+    fill: #2E2E2E;
+  }
+}
+
+@keyframes light-switch-4 {
+  0% {
+    fill: #EAE0D5;
+  }
+  50% {
+    fill: #2E2E2E;
+  }
+  100% {
+    fill: #103B51;
+  }
+}
+
+/*
+  CLOUD ANIMATIONS
+*/
+@keyframes cloud-move-1 {
+  from {
+    transform: translate(0, 50px);
+  }
+  to {
+    transform: translate(200px, 50px);
+  }
+}
+
+@keyframes cloud-move-2 {
+  from {
+    transform: translate(0, 50px);
+  }
+  to {
+    transform: translate(400px, 50px);
+  }
+}
+
+@keyframes cloud-move-3 {
+  from {
+    transform: translate(100px, 50px);
+  }
+  to {
+    transform: translate(200px, 0px);
+  }
+}
+
+#cloud-1 {
+  animation: 30s cloud-move-1 infinite alternate linear;
+}
+
+#cloud-4 {
+  animation: 25s cloud-move-1 infinite alternate linear;
+  -webkit-animation: 25s cloud-move-1 infinite alternate linear;
+}
+
+#cloud-6 {
+  animation: 320s cloud-move-2 infinite alternate linear;
+}
+
+#cloud-5 {
+  animation: 120s cloud-move-3 infinite alternate linear;
+}
+
+#light-switch-1 {
+  /*animation: light-switch 2s infinite 20s linear alternate;*/
+  animation-duration: 8.5s;
+  animation-name: light-switch-1;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: step-end;
+}
+
+.light-switch-2 {
+  /* animation: light-switch 2s infinite 20s linear alternate; */
+  animation-duration: 7.5s;
+  animation-name: light-switch-2;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: step-end;
+  animation-delay: 4s;
+}
+
+#light-switch-3 {
+  /* animation: light-switch 2s infinite 20s linear alternate; */
+  animation-duration: 10s;
+  animation-name: light-switch-3;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: step-end;
+  animation-delay: 10s;
+}
+
+.light-switch-4 {
+  /* animation: light-switch 2s infinite 20s linear alternate; */
+  animation-duration: 3.7s;
+  animation-name: light-switch-4;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: step-end;
+  animation-delay: 10s;
 }
