--- a/css/layout/main.css
+++ b/css/layout/main.css
@@ -4,7 +4,6 @@
   background-attachment: fixed;
   background-position: top right;
   background-repeat: no-repeat;
-  min-height: 50vh;
 }
 
 .main__home--wrapper {
@@ -27,6 +26,7 @@
   column-gap: 5em;
   row-gap: 2em;
   align-items: center;
+  height: 50vh;
 }
 
 @media only screen and (max-width: 768px) {
