--- a/css/base/variables.css
+++ b/css/base/variables.css
@@ -17,7 +17,7 @@
   --modal:hsla(199, 27%, 18%, .95);
   --link-hover: #E94F37;
   --btn-bg: #E94F37;
-  --table-bg: #FFF6E8;
+  --table-bg: hsla(37, 100%, 95%, .75);
   --nav-hover: hsl(31, 33%, 68%);
   --nav-active: hsl(31, 33%, 98%);
   --nav-visited: hsl(31, 33%, 88%);
