--- a/css/components/navigation.css
+++ b/css/components/navigation.css
@@ -61,7 +61,7 @@
     color: var(--color-white);
     height: 6rem;
     width: 6rem;
-    top: -0.25rem;
+    top: 1.25em;
     right: 4rem;
     z-index: 600;
   }
@@ -85,7 +85,7 @@
     content: "";
     position: absolute;
     top: 2.75rem;
-    right: 0;
+    right: 0%;
     width: 20px;
     height: 3px;
     background-color: var(--color-white);
@@ -106,6 +106,10 @@
     background-color: var(--link-hover);
     transform-origin: 0 0;
     transition: all 0.3s ease-out;
+    -webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -ms-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
   }
   .navigation__btn::after {
     content: "";
