--- a/css/pages/projects.css
+++ b/css/pages/projects.css
@@ -1,30 +1,108 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
 .project__container {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 3em 1fr 3em 1fr;
   grid-template-columns: 1fr 1fr 1fr;
+  -ms-grid-rows: 1fr 4em 1fr;
   grid-template-rows: 1fr 1fr;
+  -webkit-column-gap: 3em;
+  -moz-column-gap: 3em;
   column-gap: 3em;
   row-gap: 4em;
 }
 
+.project__container > *:nth-child(1) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+}
+
+.project__container > *:nth-child(2) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+}
+
+.project__container > *:nth-child(3) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 5;
+}
+
+.project__container > *:nth-child(4) {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+}
+
+.project__container > *:nth-child(5) {
+  -ms-grid-row: 3;
+  -ms-grid-column: 3;
+}
+
+.project__container > *:nth-child(6) {
+  -ms-grid-row: 3;
+  -ms-grid-column: 5;
+}
+
 @media only screen and (max-width: 854px) {
   .project__container {
+    -ms-grid-columns: 1fr 3em 1fr;
     grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 1fr 4em 1fr 4em 1fr;
     grid-template-rows: 1fr 1fr 1fr;
+    -webkit-column-gap: 3em;
+    -moz-column-gap: 3em;
     column-gap: 3em;
     row-gap: 4em;
+  }
+  .project__container > *:nth-child(1) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+  }
+  .project__container > *:nth-child(2) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 3;
+  }
+  .project__container > *:nth-child(3) {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+  }
+  .project__container > *:nth-child(4) {
+    -ms-grid-row: 3;
+    -ms-grid-column: 3;
+  }
+  .project__container > *:nth-child(5) {
+    -ms-grid-row: 5;
+    -ms-grid-column: 1;
+  }
+  .project__container > *:nth-child(6) {
+    -ms-grid-row: 5;
+    -ms-grid-column: 3;
   }
 }
 
 @media only screen and (max-width: 590px) {
   .project__container {
+    -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
+    -ms-grid-rows: auto;
     grid-template-rows: auto;
+    -webkit-column-gap: 3em;
+    -moz-column-gap: 3em;
     column-gap: 3em;
     row-gap: 4em;
+  }
+  .project__container > *:nth-child(1) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
   }
 }
 
 .project__card {
+  -webkit-box-shadow: 3px 3px 3em rgba(200, 174, 146, 0.7), -0.5em 1.5em 1.5em rgba(11, 10, 9, 0.134);
   box-shadow: 3px 3px 3em rgba(200, 174, 146, 0.7), -0.5em 1.5em 1.5em rgba(11, 10, 9, 0.134);
 }
 
