--- a/css/styles.main.css
+++ b/css/styles.main.css
@@ -560,7 +560,7 @@ img {
   .headline {
     padding: 0;
     font-size: 1.5em;
-    margin: 1.5em 0 1em 0;
+    margin: 4em 0 1em 0;
   }
 }
 
@@ -1050,10 +1050,17 @@ img {
   text-align: center;
 }
 
+/* THIS FILE IS ONLY USED ON THE HEADING OF THE ABOUT PAGE */
 .mt-2 {
   margin-top: 2em;
 }
 
 .mt-3 {
   margin-top: 3em;
+}
+
+@media only screen and (max-width: 30.625em) {
+  .mt-3 {
+    margin-top: 4em;
+  }
 }
